--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "The backend for waste-2-bin application",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Halltech",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.1",
     "multer": "^1.4.5-lts.1",
+    "validator": "^13.9.0",
     "xss": "^1.0.14"
   }
 }
