--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "lodash": "^4.17.21",
     "mongoose": "^7.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
+    "nodemailer-sendinblue-transport": "^2.0.1",
+    "validatejs": "^0.0.2",
     "validator": "^13.9.0",
     "xss": "^1.0.14"
   }
