--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node server.js"
   },
   "author": "Halltech",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "nodemailer-sendinblue-transport": "^2.0.1",
+    "uuid": "^9.0.0",
     "validatejs": "^0.0.2",
     "validator": "^13.9.0",
     "xss": "^1.0.14"
