--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "firebase": "^9.22.2",
+    "firebase-admin": "^11.9.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
