--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "nodemailer-sendinblue-transport": "^2.0.1",
+    "onesignal-node": "^3.4.0",
     "react-paystack": "^4.0.3",
     "socket.io": "^4.6.2",
     "stripe": "^12.9.0",
