working on image upload

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cac-verify": "^2.1.0",
+    "cloudinary": "^1.37.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
@@ -29,6 +30,7 @@
     "nodemailer-sendinblue-transport": "^2.0.1",
     "onesignal-node": "^3.4.0",
     "react-paystack": "^4.0.3",
+    "sharp": "^0.32.2",
     "socket.io": "^4.6.2",
     "stripe": "^12.9.0",
     "uuid": "^9.0.0",
